--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
             </div>
             <div class="col-6">
-                War, but fixed to give more user agency and strategy.
+                War, but fixed to give more user agency and strategy. Due to unknown reasons the playtest photos are buggy, and only screenshots of the photos were exportable. 
             </div>
             <div class="col-2">
-                <a class="btn btn-primary btn-block" href="./LINK_TO_YOUR_PLAYABLE_GAME_OR_RULES_FOR_YOUR_GAME" role="button">PLAY</a>
+                <a class="btn btn-primary btn-block" href="./Kowalzik_War_GAME601.pdf" role="button">RULES</a>
             </div>
         </div>
     </div>
@@ -39,21 +39,21 @@
                 Jokingly called "Mental Illness: The Card Game" during development. Spoons are part of an allegory used to explain the limited engery assiciated with some chronic health conditions. [LINK]. Some people who have these conditions use "spoons" as slang, ex: "I don't have the spoons to do that"/"I'm out of spoons", and some refer to themselves as Spoonies. This is a game about living as a Spoonie and trying to keep up with daily life.
             </div>
             <div class="col-2">
-                <a class="btn btn-primary btn-block" href="./LINK_TO_YOUR_PLAYABLE_GAME_OR_RULES_FOR_YOUR_GAME" role="button">PLAY</a>
+                <a class="btn btn-primary btn-block" href="./Spoonies%20Rule%20doc%20(1).pdf" role="button">Rules</a>
             </div>
         </div>
     </div>
     <div class="card">
-        <div class="card-header h3">Visual Novel or Interactive Fiction: YOUR TITLE HERE</div>
+        <div class="card-header h3">Remember Harder</div>
         <div class="card-body row">
             <div class="col-4">
                 <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
             </div>
             <div class="col-6">
-                REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+                An Inform 7 game about memory problems. The game is incomplete; the NPC doesn't interact with the player the way it is supposed to. 
             </div>
             <div class="col-2">
-                <a class="btn btn-primary btn-block" href="./LINK_TO_YOUR_PLAYABLE_GAME_OR_RULES_FOR_YOUR_GAME" role="button">PLAY</a>
+                <a class="btn btn-primary btn-block" href="./play.html" role="button">PLAY</a>
             </div>
         </div>
     </div>
@@ -72,13 +72,13 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header h3">(Final) Digital Game: YOUR TITLE HERE</div>
+        <div class="card-header h3">(Final) Mr. Cat is Missing Teeth</div>
         <div class="card-body row">
             <div class="col-4">
-                <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+                <img class="img-fluid" src="./mr cat.png">
             </div>
             <div class="col-6">
-                REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+                A short narrative game about ptsd symptoms and taming feral cats.
             </div>
             <div class="col-2">
                 <a class="btn btn-primary btn-block" href="./LINK_TO_YOUR_PLAYABLE_GAME_OR_RULES_FOR_YOUR_GAME" role="button">PLAY</a>
