added inform 7 files

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 Jokingly called "Mental Illness: The Card Game" during development. Spoons are part of an allegory used to explain the limited engery assiciated with some chronic health conditions. [LINK]. Some people who have these conditions use "spoons" as slang, ex: "I don't have the spoons to do that"/"I'm out of spoons", and some refer to themselves as Spoonies. This is a game about living as a Spoonie and trying to keep up with daily life.
             </div>
             <div class="col-2">
-                <a class="btn btn-primary btn-block" href="./Spoonies%20Rule%20doc%20(1).pdf" role="button">Rules</a>
+                <a class="btn btn-primary btn-block" href="./Spoonies%20Rule%20doc%20(1).pdf" role="button">RULES</a>
             </div>
         </div>
     </div>
@@ -78,7 +78,7 @@
                 <img class="img-fluid" src="./mr cat.png">
             </div>
             <div class="col-6">
-                A short narrative game about ptsd symptoms and taming feral cats.
+                A short narrative game about ptsd symptoms and taming a feral cat.
             </div>
             <div class="col-2">
                 <a class="btn btn-primary btn-block" href="./LINK_TO_YOUR_PLAYABLE_GAME_OR_RULES_FOR_YOUR_GAME" role="button">PLAY</a>
