added twine game

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 A short narrative game about ptsd symptoms and taming a feral cat.
             </div>
             <div class="col-2">
-                <a class="btn btn-primary btn-block" href="./LINK_TO_YOUR_PLAYABLE_GAME_OR_RULES_FOR_YOUR_GAME" role="button">PLAY</a>
+                <a class="btn btn-primary btn-block" href="./601 final.html" role="button">PLAY</a>
             </div>
         </div>
     </div>
