added cards photo

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="card-header h3">Game Modification: War</div>
         <div class="card-body row">
             <div class="col-4">
-                <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+                <img class="img-fluid" src="./IMG_3419.png">
             </div>
             <div class="col-6">
-                War, but fixed to give more user agency and strategy. Due to unknown reasons the playtest photos are buggy, and only screenshots of the photos were exportable. 
+                War, but fixed to give more user agency and strategy. Due to unknown reasons the playtest photos are buggy and do not show up when placed in the rules document. 
             </div>
             <div class="col-2">
                 <a class="btn btn-primary btn-block" href="./Kowalzik_War_GAME601.pdf" role="button">RULES</a>
