--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="card-header h3">Game Modification: War</div>
         <div class="card-body row">
             <div class="col-4">
-                <img class="img-fluid" src="./IMG_3419.png">
+                <img class="img-fluid" src="./cards">
             </div>
             <div class="col-6">
                 War, but fixed to give more user agency and strategy. Due to unknown reasons the playtest photos are buggy and do not show up when placed in the rules document. 
@@ -33,7 +33,7 @@
         <div class="card-header h3">(Midterm) Non-Digital Game: Spoonies</div>
         <div class="card-body row">
             <div class="col-4">
-                <img class="img-fluid" src="Spoonies%20Rule%20doc%20(1).pdf">
+                <img class="img-fluid" src="spoonieBack.jpg">
             </div>
             <div class="col-6">
                 Jokingly called "Mental Illness: The Card Game" during development. Spoons are part of an allegory used to explain the limited engery assiciated with some chronic health conditions. [LINK]. Some people who have these conditions use "spoons" as slang, ex: "I don't have the spoons to do that"/"I'm out of spoons", and some refer to themselves as Spoonies. This is a game about living as a Spoonie and trying to keep up with daily life.
