--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="card-header h3">Game Modification: War</div>
         <div class="card-body row">
             <div class="col-4">
-                <img class="img-fluid" src="./cards">
+                <img class="img-fluid" src="./cards.PNG">
             </div>
             <div class="col-6">
                 War, but fixed to give more user agency and strategy. Due to unknown reasons the playtest photos are buggy and do not show up when placed in the rules document. 
@@ -47,7 +47,7 @@
         <div class="card-header h3">Remember Harder</div>
         <div class="card-body row">
             <div class="col-4">
-                <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+<!--                <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">-->
             </div>
             <div class="col-6">
                 An Inform 7 game about memory problems. The game is incomplete; the NPC doesn't interact with the player the way it is supposed to. 
