--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header h3">Programming with p5js</div>
+        <div class="card-header h3">Goldfish</div>
         <div class="card-body row">
             <div class="col-4">
-                <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+                <img class="img-fluid" src="./fish.PNG">
             </div>
             <div class="col-6">
-                REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+                An mini game. Catch the goldgish by clicking on it with your mouse
             </div>
             <div class="col-2">
-                <a class="btn btn-primary btn-block" href="./LINK_TO_P5_PROJECT" role="button">PLAY</a>
+                <a class="btn btn-primary btn-block" href="./p5%2520(1)/Goldfish/" role="button">PLAY</a>
             </div>
         </div>
     </div>
