--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color:grey;">
     <div class="jumbotron m-0">
         <h1 class="display-4">Ilia Kowalzik</h1>
         <p class="lead">My games from GAME 601 - Game Prototyping at American University in Fall 2020</p>
