--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header h3">Remember Harder</div>
+        <div class="card-header h3">Interactive Fiction: Remember Harder</div>
         <div class="card-body row">
             <div class="col-4">
 <!--                <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">-->
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header h3">Goldfish</div>
+        <div class="card-header h3">Programming with p5js: Goldfish</div>
         <div class="card-body row">
             <div class="col-4">
                 <img class="img-fluid" src="./fish.PNG">
@@ -72,7 +72,7 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header h3">(Final) Mr. Cat is Missing Teeth</div>
+        <div class="card-header h3">(Final) Digital Game: Mr. Cat is Missing Teeth</div>
         <div class="card-body row">
             <div class="col-4">
                 <img class="img-fluid" src="./mr cat.png">
