--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img class="img-fluid" src="spoonieBack.jpg">
             </div>
             <div class="col-6">
-                Jokingly called "Mental Illness: The Card Game" during development. Spoons are part of an allegory used to explain the limited engery assiciated with some chronic health conditions. [LINK]. Some people who have these conditions use "spoons" as slang, ex: "I don't have the spoons to do that"/"I'm out of spoons", and some refer to themselves as Spoonies. This is a game about living as a Spoonie and trying to keep up with daily life.
+                Spoons are part of an allegory used to explain the limited engery assiciated with some chronic health conditions. Some people who have these conditions use "spoons" as slang, ex: "I don't have the spoons to do that"/"I'm out of spoons", and some refer to themselves as Spoonies. This is a game about living as a Spoonie and trying to keep up with daily life.
             </div>
             <div class="col-2">
                 <a class="btn btn-primary btn-block" href="./Spoonies%20Rule%20doc%20(1).pdf" role="button">RULES</a>
