--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img class="img-fluid" src="./fish.PNG">
             </div>
             <div class="col-6">
-                An mini game. Catch the goldgish by clicking on it with your mouse
+                A mini game. Catch the goldfish by clicking on it with your mouse
             </div>
             <div class="col-2">
                 <a class="btn btn-primary btn-block" href="./p5%2520(1)/Goldfish/" role="button">PLAY</a>
