--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="card-header h3">Programming with p5js: Goldfish</div>
         <div class="card-body row">
             <div class="col-4">
-                <img class="img-fluid" src="./fish.PNG">
+                <img class="img-fluid" src="./fish.png">
             </div>
             <div class="col-6">
                 A mini game. Catch the goldfish by clicking on it with your mouse
